# kursach-yoooo

./: CMakeLists.txt  lab1.cpp  lab1.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  lab4.cpp  lab4.h  main.cpp  main.h  text1.txt  text2.txt  Отчет прога Беляев К. В.docx
