cmake_minimum_required(VERSION 3.26)
project(practice4)

set(CMAKE_CXX_STANDARD 23)

add_executable(kursach-yoooo
        main.cpp
        lab1.cpp
        lab1.h
        lab2.cpp
        lab2.h
        lab3.cpp
        lab3.h
        lab4.cpp
        lab4.h
        main.h
        funcs.h
        funcs.cpp

)
